accelerated-domains: add yhmsfc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97609,6 +97609,7 @@ server=/yhlbx.com/114.114.114.114
 server=/yhly.shop/114.114.114.114
 server=/yhm11.com/114.114.114.114
 server=/yhmob.com/114.114.114.114
+server=/yhmsfc.com/114.114.114.114
 server=/yhmyi.com/114.114.114.114
 server=/yhouse.com/114.114.114.114
 server=/yhpackaging.net/114.114.114.114
