accelerated-domains: add xingzuoyundns.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94107,6 +94107,7 @@ server=/xingzou.art/114.114.114.114
 server=/xingzoushu.com/114.114.114.114
 server=/xingzuo.com/114.114.114.114
 server=/xingzuowu.com/114.114.114.114
+server=/xingzuoyundns.com/114.114.114.114
 server=/xinhaiglobal.com/114.114.114.114
 server=/xinhaimineral.com/114.114.114.114
 server=/xinhaiminingepc.com/114.114.114.114
