accelerated-domains: add hostgw.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43810,6 +43810,7 @@ server=/hostadm.net/114.114.114.114
 server=/hostbbs.net/114.114.114.114
 server=/hostbuf.com/114.114.114.114
 server=/hostdie.com/114.114.114.114
+server=/hostgw.net/114.114.114.114
 server=/hostidc.net/114.114.114.114
 server=/hostkvm.com/114.114.114.114
 server=/hostloc.me/114.114.114.114
