accelerated-domains: add dun599.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28366,6 +28366,7 @@ server=/dun-mfy-cdn.com/114.114.114.114
 server=/dun.la/114.114.114.114
 server=/dun.tax/114.114.114.114
 server=/dun555.com/114.114.114.114
+server=/dun599.com/114.114.114.114
 server=/dunan.net/114.114.114.114
 server=/dunanac.com/114.114.114.114
 server=/dunankeji.com/114.114.114.114
