--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7987,6 +7987,7 @@ server=/8wq.com/114.114.114.114
 server=/8wss.com/114.114.114.114
 server=/8wym.com/114.114.114.114
 server=/8x6x.com/114.114.114.114
+server=/8xj.org/114.114.114.114
 server=/8xs.org/114.114.114.114
 server=/8xz8.com/114.114.114.114
 server=/8ydsp.com/114.114.114.114
