--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17007,6 +17007,7 @@ server=/bxwljt.com/114.114.114.114
 server=/bxwst.com/114.114.114.114
 server=/bxwx.io/114.114.114.114
 server=/bxwx.tv/114.114.114.114
+server=/bxwx520.org/114.114.114.114
 server=/bxxy.com/114.114.114.114
 server=/bxxyysc.com/114.114.114.114
 server=/bxyuer.com/114.114.114.114
