--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67180,6 +67180,7 @@ server=/omiaozu.com/114.114.114.114
 server=/omicsclass.com/114.114.114.114
 server=/omicshare.net/114.114.114.114
 server=/omifanyi.com/114.114.114.114
+server=/ominat.com/114.114.114.114
 server=/omlzx.com/114.114.114.114
 server=/omlzz.com/114.114.114.114
 server=/ommoo.com/114.114.114.114
