--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95079,6 +95079,7 @@ server=/xn--7mqy6dj0brts55e.com/114.114.114.114
 server=/xn--7qvz7xssa.com/114.114.114.114
 server=/xn--7stv4oc3evv7b.com/114.114.114.114
 server=/xn--88-9s0f59z.com/114.114.114.114
+server=/xn--8lqrjra071bi0qgga421cs99a4qeqwm.com/114.114.114.114
 server=/xn--8ou124e6ek.net/114.114.114.114
 server=/xn--8stx8olrwkucjq3b.com/114.114.114.114
 server=/xn--8y0ao80c.com/114.114.114.114
