--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25138,6 +25138,7 @@ server=/dakapath.com/114.114.114.114
 server=/dakaruanwen.com/114.114.114.114
 server=/dakawm.cc/114.114.114.114
 server=/dakejie.com/114.114.114.114
+server=/dakekj.com/114.114.114.114
 server=/dakele.com/114.114.114.114
 server=/dalaba.com/114.114.114.114
 server=/dalanyouxi.com/114.114.114.114
