--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24901,6 +24901,7 @@ server=/daanjiexi.com/114.114.114.114
 server=/daanwo.com/114.114.114.114
 server=/daas-auto.com/114.114.114.114
 server=/daba.com/114.114.114.114
+server=/dabai4.com/114.114.114.114
 server=/dabaicai.com/114.114.114.114
 server=/dabaicai.org/114.114.114.114
 server=/dabaidaojia.com/114.114.114.114
