--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7934,6 +7934,7 @@ server=/8jzw.cc/114.114.114.114
 server=/8k7k.com/114.114.114.114
 server=/8kaa.com/114.114.114.114
 server=/8kana.com/114.114.114.114
+server=/8kkcny.click/114.114.114.114
 server=/8kmm.com/114.114.114.114
 server=/8kvkt7.com/114.114.114.114
 server=/8kwebs.com/114.114.114.114
