--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92605,6 +92605,7 @@ server=/xcsclhs.com/114.114.114.114
 server=/xcshaifen.com/114.114.114.114
 server=/xcspcs.com/114.114.114.114
 server=/xcstuido.com/114.114.114.114
+server=/xcswkj.com/114.114.114.114
 server=/xcsyy.com/114.114.114.114
 server=/xct168.com/114.114.114.114
 server=/xctmr.com/114.114.114.114
