accelerated-domains: add lkjmqm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58364,6 +58364,7 @@ server=/lkgk.net/114.114.114.114
 server=/lkgshq.com/114.114.114.114
 server=/lkhaowu.com/114.114.114.114
 server=/lking.icu/114.114.114.114
+server=/lkjmqm.com/114.114.114.114
 server=/lkjujm.com/114.114.114.114
 server=/lkkbrand.com/114.114.114.114
 server=/lkkcdn.com/114.114.114.114
