accelerated-domains: add eojofdrzei4.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30161,6 +30161,7 @@ server=/eoemarket.net/114.114.114.114
 server=/eoffcn.com/114.114.114.114
 server=/eoidde.com/114.114.114.114
 server=/eoivisa.com/114.114.114.114
+server=/eojofdrzei4.com/114.114.114.114
 server=/eokhnnam.shop/114.114.114.114
 server=/eolink.com/114.114.114.114
 server=/eolinker.com/114.114.114.114
