accelerated-domains: add fcsdzly.xyz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31551,6 +31551,7 @@ server=/fcrc114.com/114.114.114.114
 server=/fcs1.com/114.114.114.114
 server=/fcsc.com/114.114.114.114
 server=/fcsccz.com/114.114.114.114
+server=/fcsdzly.xyz/114.114.114.114
 server=/fcstor.com/114.114.114.114
 server=/fctaiwan.com/114.114.114.114
 server=/fcuit.com/114.114.114.114
