--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102481,6 +102481,7 @@ server=/zhaoyun.com/114.114.114.114
 server=/zhaozhanxu.com/114.114.114.114
 server=/zhaozhishi.com/114.114.114.114
 server=/zhaozongjie.com/114.114.114.114
+server=/zhaqtuu.xyz/114.114.114.114
 server=/zharev.com/114.114.114.114
 server=/zhatoufa.com/114.114.114.114
 server=/zhb1.com/114.114.114.114
