--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61552,6 +61552,7 @@ server=/mergeek.com/114.114.114.114
 server=/merklechina.com/114.114.114.114
 server=/merkpd.com/114.114.114.114
 server=/merlinexh.com/114.114.114.114
+server=/mernrza.com/114.114.114.114
 server=/mero-db.com/114.114.114.114
 server=/merroint.com/114.114.114.114
 server=/meryt111.fun/114.114.114.114
