accelerated-domains: add kmgybsr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54757,6 +54757,7 @@ server=/kmg-jd.com/114.114.114.114
 server=/kmgcpf.net/114.114.114.114
 server=/kmgg88.com/114.114.114.114
 server=/kmguolv.com/114.114.114.114
+server=/kmgybsr.com/114.114.114.114
 server=/kmhdjz.com/114.114.114.114
 server=/kmhwtz.com/114.114.114.114
 server=/kmhybz.com/114.114.114.114
