accelerated-domains: add xn--czru2dx3eszw3lat53b.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95133,6 +95133,7 @@ server=/xn--cqur4grqt5a7z4f.com/114.114.114.114
 server=/xn--cssw8z54rj2ds2q.com/114.114.114.114
 server=/xn--czr93rxry.com/114.114.114.114
 server=/xn--czru2de3uv8gtikvb02m736e.fun/114.114.114.114
+server=/xn--czru2dx3eszw3lat53b.com/114.114.114.114
 server=/xn--dev407h.com/114.114.114.114
 server=/xn--djr58xb1mzxk3mtrhfc8g.com/114.114.114.114
 server=/xn--dkr447bejn.com/114.114.114.114
