accelerated-domains: add hzaygb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45956,6 +45956,7 @@ server=/hzamcare.com/114.114.114.114
 server=/hzaoz.com/114.114.114.114
 server=/hzapuqi.com/114.114.114.114
 server=/hzarx.com/114.114.114.114
+server=/hzaygb.com/114.114.114.114
 server=/hzazh.com/114.114.114.114
 server=/hzbcdp.com/114.114.114.114
 server=/hzbcxg.com/114.114.114.114
