--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34386,6 +34386,7 @@ server=/gdswkj668.com/114.114.114.114
 server=/gdsxgd.com/114.114.114.114
 server=/gdsytech.com/114.114.114.114
 server=/gdsyy.org/114.114.114.114
+server=/gdsyzxsz.com/114.114.114.114
 server=/gdszjgdj.org/114.114.114.114
 server=/gdszkw.com/114.114.114.114
 server=/gdszsl.com/114.114.114.114
