--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37186,6 +37186,7 @@ server=/gwmapp-h.com/114.114.114.114
 server=/gwmfc.com/114.114.114.114
 server=/gwmmarathon.com/114.114.114.114
 server=/gwmsoft.com/114.114.114.114
+server=/gwnsxx.com/114.114.114.114
 server=/gwnz.com/114.114.114.114
 server=/gworg.com/114.114.114.114
 server=/gwozai.com/114.114.114.114
