--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91880,6 +91880,7 @@ server=/wxlivecdn.com/114.114.114.114
 server=/wxlongda.com/114.114.114.114
 server=/wxlongre.com/114.114.114.114
 server=/wxlpool.com/114.114.114.114
+server=/wxlxgzx.com/114.114.114.114
 server=/wxlydhb.com/114.114.114.114
 server=/wxmama.com/114.114.114.114
 server=/wxmetro.net/114.114.114.114
