--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26327,6 +26327,7 @@ server=/dgphospital.com/114.114.114.114
 server=/dgptjob.com/114.114.114.114
 server=/dgqianguan.com/114.114.114.114
 server=/dgqjj.com/114.114.114.114
+server=/dgqzxx.net/114.114.114.114
 server=/dgrbcj.com/114.114.114.114
 server=/dgrcw.com/114.114.114.114
 server=/dgrgr34.fun/114.114.114.114
