--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76257,6 +76257,7 @@ server=/shangketang.com/114.114.114.114
 server=/shangli-tea.com/114.114.114.114
 server=/shanglin.net/114.114.114.114
 server=/shanglinxiangfa.com/114.114.114.114
+server=/shanglischool.com/114.114.114.114
 server=/shanglp.com/114.114.114.114
 server=/shangluo.co/114.114.114.114
 server=/shanglushan.com/114.114.114.114
