--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41463,6 +41463,7 @@ server=/hd-english.com/114.114.114.114
 server=/hd-english.net/114.114.114.114
 server=/hd-mw.com/114.114.114.114
 server=/hd-tvb.com/114.114.114.114
+server=/hd-u.com/114.114.114.114
 server=/hd.gg/114.114.114.114
 server=/hd027.com/114.114.114.114
 server=/hd123.com/114.114.114.114
