--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81825,6 +81825,7 @@ server=/szporter.com/114.114.114.114
 server=/szpowerfly.com/114.114.114.114
 server=/szpowerpms.com/114.114.114.114
 server=/szps1688.com/114.114.114.114
+server=/szptxx.com/114.114.114.114
 server=/szputy.com/114.114.114.114
 server=/szpxe.com/114.114.114.114
 server=/szqcz.com/114.114.114.114
