--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17632,6 +17632,7 @@ server=/cangqiongkanshu.com/114.114.114.114
 server=/cangshui.net/114.114.114.114
 server=/cangshutun.com/114.114.114.114
 server=/cangxiaoer.com/114.114.114.114
+server=/cangxitianli.com/114.114.114.114
 server=/cangya.com/114.114.114.114
 server=/cangzhouhd.com/114.114.114.114
 server=/canhighcenter.com/114.114.114.114
