--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92161,6 +92161,7 @@ server=/wzz1809.com/114.114.114.114
 server=/wzzbdz.com/114.114.114.114
 server=/wzzcd.com/114.114.114.114
 server=/wzzhchem.com/114.114.114.114
+server=/wzzjzxx.com/114.114.114.114
 server=/wzzlovesli.com/114.114.114.114
 server=/wzznft.com/114.114.114.114
 server=/wzzp.com/114.114.114.114
