--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101059,6 +101059,7 @@ server=/yyrtv.com/114.114.114.114
 server=/yyshangfu.com/114.114.114.114
 server=/yystatic.com/114.114.114.114
 server=/yysweb.com/114.114.114.114
+server=/yyszfsxx.com/114.114.114.114
 server=/yytad.com/114.114.114.114
 server=/yytcdn.com/114.114.114.114
 server=/yytek.com/114.114.114.114
