--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78664,6 +78664,7 @@ server=/sjzsidadianji.com/114.114.114.114
 server=/sjzslnyhy.com/114.114.114.114
 server=/sjzswtz.com/114.114.114.114
 server=/sjzsyjxx.com/114.114.114.114
+server=/sjzszz.com/114.114.114.114
 server=/sjztd.com/114.114.114.114
 server=/sjzxfy.com/114.114.114.114
 server=/sjzxtsh.com/114.114.114.114
