--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102967,6 +102967,7 @@ server=/zhjdkz.com/114.114.114.114
 server=/zhjgongjiao.com/114.114.114.114
 server=/zhjiameng.com/114.114.114.114
 server=/zhjianet.com/114.114.114.114
+server=/zhjingsai.com/114.114.114.114
 server=/zhjj.org/114.114.114.114
 server=/zhjncb.com/114.114.114.114
 server=/zhjp.net/114.114.114.114
