--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105712,6 +105712,7 @@ server=/zzhx56.com/114.114.114.114
 server=/zzhybz.com/114.114.114.114
 server=/zzicpa.com/114.114.114.114
 server=/zzidc.com/114.114.114.114
+server=/zzjdgcxx.com/114.114.114.114
 server=/zzjianyun.com/114.114.114.114
 server=/zzjsled.com/114.114.114.114
 server=/zzjunzhi.com/114.114.114.114
