--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16317,6 +16317,7 @@ server=/bossgoo.com/114.114.114.114
 server=/bossgy.com/114.114.114.114
 server=/bosshr.com/114.114.114.114
 server=/bosszhipin.com/114.114.114.114
+server=/bostonis.org/114.114.114.114
 server=/bosunman.com/114.114.114.114
 server=/botaogroup.com/114.114.114.114
 server=/botaoo.com/114.114.114.114
