--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81194,6 +81194,7 @@ server=/sxy7.com/114.114.114.114
 server=/sxyckjr.com/114.114.114.114
 server=/sxycpc.com/114.114.114.114
 server=/sxycrb.com/114.114.114.114
+server=/sxycys.com/114.114.114.114
 server=/sxyj.net/114.114.114.114
 server=/sxyrxb.com/114.114.114.114
 server=/sxyyzcj.com/114.114.114.114
