--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51600,6 +51600,7 @@ server=/jlrcom.com/114.114.114.114
 server=/jlrfx.com/114.114.114.114
 server=/jlriza.com/114.114.114.114
 server=/jlscjrkf.com/114.114.114.114
+server=/jlsdesyxx.com/114.114.114.114
 server=/jlsdwj.com/114.114.114.114
 server=/jlsdzgckcy.com/114.114.114.114
 server=/jlsebhyy.com/114.114.114.114
