--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43165,6 +43165,7 @@ server=/hngwkj.net/114.114.114.114
 server=/hngwy.org/114.114.114.114
 server=/hngwyw.org/114.114.114.114
 server=/hngwzk.com/114.114.114.114
+server=/hngx.net/114.114.114.114
 server=/hnh.cc/114.114.114.114
 server=/hnhbyxdq.com/114.114.114.114
 server=/hnhflqgc.com/114.114.114.114
