--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43255,6 +43255,7 @@ server=/hnol.net/114.114.114.114
 server=/hnpfw.com/114.114.114.114
 server=/hnpic.com/114.114.114.114
 server=/hnpolice.com/114.114.114.114
+server=/hnptschool.net/114.114.114.114
 server=/hnpwholesale.com.au/114.114.114.114
 server=/hnpysf.com/114.114.114.114
 server=/hnqczy.com/114.114.114.114
