accelerated-domains: add skywalkeryacht.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78851,6 +78851,7 @@ server=/skysrt.com/114.114.114.114
 server=/skytv.cc/114.114.114.114
 server=/skyue.com/114.114.114.114
 server=/skyw.cc/114.114.114.114
+server=/skywalkeryacht.com/114.114.114.114
 server=/skywavewifi.com/114.114.114.114
 server=/skywek.com/114.114.114.114
 server=/skywellcorp.com/114.114.114.114
