--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24739,6 +24739,7 @@ server=/czjyzx.net/114.114.114.114
 server=/czkbdq.net/114.114.114.114
 server=/czkctl.com/114.114.114.114
 server=/czkingdee.com/114.114.114.114
+server=/czlgj.com/114.114.114.114
 server=/czlingke.com/114.114.114.114
 server=/czlkgy.com/114.114.114.114
 server=/czlsgz.com/114.114.114.114
