--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52444,6 +52444,7 @@ server=/jssfgl.com/114.114.114.114
 server=/jssfx.com/114.114.114.114
 server=/jssgjjt.com/114.114.114.114
 server=/jsshfcw.com/114.114.114.114
+server=/jsshmzx.com/114.114.114.114
 server=/jsshow.net/114.114.114.114
 server=/jsshrzx.com/114.114.114.114
 server=/jsshuntai.com/114.114.114.114
