--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79915,6 +79915,7 @@ server=/srxiayunbusiness.com/114.114.114.114
 server=/srxww.com/114.114.114.114
 server=/srxzc.com/114.114.114.114
 server=/srxzz.com/114.114.114.114
+server=/srygz.com/114.114.114.114
 server=/srzc.com/114.114.114.114
 server=/srzdq.com/114.114.114.114
 server=/srzx.com/114.114.114.114
