--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47826,6 +47826,7 @@ server=/imugeda.com/114.114.114.114
 server=/imuke.com/114.114.114.114
 server=/imummybiz.com/114.114.114.114
 server=/imvictor.tech/114.114.114.114
+server=/imvtc.com/114.114.114.114
 server=/imwaco.com/114.114.114.114
 server=/imwallet.com/114.114.114.114
 server=/imweb.io/114.114.114.114
