--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98469,6 +98469,7 @@ server=/yixun.com/114.114.114.114
 server=/yixunjidian.com/114.114.114.114
 server=/yixunwu.com/114.114.114.114
 server=/yiya520.com/114.114.114.114
+server=/yiyacht.com/114.114.114.114
 server=/yiyaha.com/114.114.114.114
 server=/yiyanche.com/114.114.114.114
 server=/yiyang168.com/114.114.114.114
