--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36789,6 +36789,7 @@ server=/guardease.com/114.114.114.114
 server=/guardrailchina.com/114.114.114.114
 server=/guatedu.com/114.114.114.114
 server=/guatuwang.com/114.114.114.114
+server=/guayunfan.com/114.114.114.114
 server=/guazhuan.com/114.114.114.114
 server=/guazi-apps.com/114.114.114.114
 server=/guazi.com/114.114.114.114
