--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43328,6 +43328,7 @@ server=/hnsyyq.com/114.114.114.114
 server=/hnsyzls.com/114.114.114.114
 server=/hnsyzxyy.com/114.114.114.114
 server=/hnszn.com/114.114.114.114
+server=/hnszyxy.com/114.114.114.114
 server=/hntbpm.com/114.114.114.114
 server=/hntchq.com/114.114.114.114
 server=/hntcm.com/114.114.114.114
