--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45573,6 +45573,7 @@ server=/hwastro.com/114.114.114.114
 server=/hwasunpharma.com/114.114.114.114
 server=/hwbanaa.com/114.114.114.114
 server=/hwbaoan.com/114.114.114.114
+server=/hwbs.org/114.114.114.114
 server=/hwccpc.com/114.114.114.114
 server=/hwcdnsre.com/114.114.114.114
 server=/hwcloudlive.com/114.114.114.114
