--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46173,6 +46173,7 @@ server=/hznzcn.com/114.114.114.114
 server=/hzodfwxs.com/114.114.114.114
 server=/hzorganicchem.com/114.114.114.114
 server=/hzou.net/114.114.114.114
+server=/hzpcs.com/114.114.114.114
 server=/hzpgc.com/114.114.114.114
 server=/hzpzs.net/114.114.114.114
 server=/hzqfy.com/114.114.114.114
