--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46285,6 +46285,7 @@ server=/hzxinglong-ip.com/114.114.114.114
 server=/hzxinshen.com/114.114.114.114
 server=/hzxiyuege.com/114.114.114.114
 server=/hzxma.com/114.114.114.114
+server=/hzxqf.com/114.114.114.114
 server=/hzxsjgxx.com/114.114.114.114
 server=/hzxuanming.com/114.114.114.114
 server=/hzxuhong.com/114.114.114.114
