--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22271,6 +22271,7 @@ server=/cncsparetools.com/114.114.114.114
 server=/cnction.com/114.114.114.114
 server=/cnctrip.com/114.114.114.114
 server=/cncwkj.com/114.114.114.114
+server=/cncxjyu.com/114.114.114.114
 server=/cnczjy.com/114.114.114.114
 server=/cndailu.com/114.114.114.114
 server=/cndaizi.com/114.114.114.114
