--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77841,6 +77841,7 @@ server=/shukuge.com/114.114.114.114
 server=/shukw.com/114.114.114.114
 server=/shukwai.com/114.114.114.114
 server=/shulanapp.com/114.114.114.114
+server=/shulanedu.com/114.114.114.114
 server=/shulb.com/114.114.114.114
 server=/shulex-voc.com/114.114.114.114
 server=/shuliangtec.com/114.114.114.114
