--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46222,6 +46222,7 @@ server=/hzshanjie.com/114.114.114.114
 server=/hzshantai.com/114.114.114.114
 server=/hzshengjia.com/114.114.114.114
 server=/hzshudian.com/114.114.114.114
+server=/hzslgf.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
 server=/hzsmbio.com/114.114.114.114
 server=/hzsnowcom.com/114.114.114.114
