--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84461,6 +84461,7 @@ server=/tongfudun.com/114.114.114.114
 server=/tongfugroup.com/114.114.114.114
 server=/tonggao.info/114.114.114.114
 server=/tongguanbao.net/114.114.114.114
+server=/tonghanguav.com/114.114.114.114
 server=/tonghuaji.com/114.114.114.114
 server=/tonghuiqiye.com/114.114.114.114
 server=/tongji.com/114.114.114.114
