--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104081,6 +104081,7 @@ server=/zjfengli.com/114.114.114.114
 server=/zjfszhsw.com/114.114.114.114
 server=/zjft.com/114.114.114.114
 server=/zjfujiu.com/114.114.114.114
+server=/zjg-edu.com/114.114.114.114
 server=/zjg-jcu.com/114.114.114.114
 server=/zjgas.com/114.114.114.114
 server=/zjgcreative.com/114.114.114.114
