--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10226,6 +10226,7 @@ server=/aipapi.com/114.114.114.114
 server=/aipark.com/114.114.114.114
 server=/aipenglai.com/114.114.114.114
 server=/aipgy.com/114.114.114.114
+server=/aiphz.com/114.114.114.114
 server=/aipiaxi.com/114.114.114.114
 server=/aipingxiang.com/114.114.114.114
 server=/aippt.com/114.114.114.114
