--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75060,6 +75060,7 @@ server=/scgkw.net/114.114.114.114
 server=/scgra.com/114.114.114.114
 server=/scgxhq.com/114.114.114.114
 server=/sch-szu.com/114.114.114.114
+server=/schbrain.com/114.114.114.114
 server=/schbrilliant.com/114.114.114.114
 server=/schdxww.com/114.114.114.114
 server=/schengle.com/114.114.114.114
