--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52640,6 +52640,7 @@ server=/jszlyy.com/114.114.114.114
 server=/jszmly.com/114.114.114.114
 server=/jszn.ink/114.114.114.114
 server=/jszpw.net/114.114.114.114
+server=/jszs.com/114.114.114.114
 server=/jszxsw.com/114.114.114.114
 server=/jszygs.com/114.114.114.114
 server=/jszyyguoji.com/114.114.114.114
