--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43103,6 +43103,7 @@ server=/hmz.com/114.114.114.114
 server=/hmz66.com/114.114.114.114
 server=/hmz8.com/114.114.114.114
 server=/hmzixin.com/114.114.114.114
+server=/hmzjzx.com/114.114.114.114
 server=/hmzs.net/114.114.114.114
 server=/hmzx163.com/114.114.114.114
 server=/hn-cbec.com/114.114.114.114
