--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53924,6 +53924,7 @@ server=/kaolafm.net/114.114.114.114
 server=/kaolawenku.com/114.114.114.114
 server=/kaolazhengxin.com/114.114.114.114
 server=/kaom.net/114.114.114.114
+server=/kaomeiyuan.com/114.114.114.114
 server=/kaonaw.com/114.114.114.114
 server=/kaonun.com/114.114.114.114
 server=/kaopenhs.com/114.114.114.114
