accelerated-domains: add xcvec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92668,6 +92668,7 @@ server=/xctmr.com/114.114.114.114
 server=/xcultur.com/114.114.114.114
 server=/xcurrency.com/114.114.114.114
 server=/xcvdd.xyz/114.114.114.114
+server=/xcvec.com/114.114.114.114
 server=/xcvmbyte.com/114.114.114.114
 server=/xcvvs.com/114.114.114.114
 server=/xcwhjj.com/114.114.114.114
