--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25544,6 +25544,7 @@ server=/daxuecidian.com/114.114.114.114
 server=/daxuecn.com/114.114.114.114
 server=/daxueit.com/114.114.114.114
 server=/daxuejiayou.com/114.114.114.114
+server=/daxuelu.com/114.114.114.114
 server=/daxuepc.com/114.114.114.114
 server=/daxuequna.com/114.114.114.114
 server=/daxueshi.com/114.114.114.114
