--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50680,6 +50680,7 @@ server=/jinanguanggao.com/114.114.114.114
 server=/jinanhualian.com/114.114.114.114
 server=/jinanxww.com/114.114.114.114
 server=/jinbaiteng.com/114.114.114.114
+server=/jinbangedu.com/114.114.114.114
 server=/jinbaobeiqiming.com/114.114.114.114
 server=/jinbaoidc.com/114.114.114.114
 server=/jinbaonet.com/114.114.114.114
