--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105099,6 +105099,7 @@ server=/zsbzsw.com/114.114.114.114
 server=/zscaishang.com/114.114.114.114
 server=/zscch.com/114.114.114.114
 server=/zschem.com/114.114.114.114
+server=/zscollege.com/114.114.114.114
 server=/zscz0768.com/114.114.114.114
 server=/zsd.name/114.114.114.114
 server=/zsdianlan.com/114.114.114.114
