--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14679,6 +14679,7 @@ server=/bianzhile.com/114.114.114.114
 server=/bianzhirensheng.com/114.114.114.114
 server=/biao12.com/114.114.114.114
 server=/biao689.com/114.114.114.114
+server=/biaobaini.com/114.114.114.114
 server=/biaoceo.com/114.114.114.114
 server=/biaodan.info/114.114.114.114
 server=/biaodan100.com/114.114.114.114
