--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52288,6 +52288,7 @@ server=/jsdesoft.com/114.114.114.114
 server=/jsdgb.com/114.114.114.114
 server=/jsdhjssyjt.com/114.114.114.114
 server=/jsdjwood.com/114.114.114.114
+server=/jsdkdzw.com/114.114.114.114
 server=/jsdmirror.com/114.114.114.114
 server=/jsdrc.com/114.114.114.114
 server=/jsdsad.com/114.114.114.114
