--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57152,6 +57152,7 @@ server=/lezhiot.com/114.114.114.114
 server=/lezhiyun.com/114.114.114.114
 server=/lezhuan168.com/114.114.114.114
 server=/lezhuan365.com/114.114.114.114
+server=/lezhuanwang.net/114.114.114.114
 server=/lezhudai.com/114.114.114.114
 server=/lezhufenqi.com/114.114.114.114
 server=/lezhun.com/114.114.114.114
