--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62323,6 +62323,7 @@ server=/minrank.com/114.114.114.114
 server=/minretail.com/114.114.114.114
 server=/minshangjie.com/114.114.114.114
 server=/minshengec.com/114.114.114.114
+server=/minshengjob.com/114.114.114.114
 server=/minshop.com/114.114.114.114
 server=/mintaibank.com/114.114.114.114
 server=/mintake.com/114.114.114.114
