--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75134,6 +75134,7 @@ server=/scichina.com/114.114.114.114
 server=/scicn.net/114.114.114.114
 server=/scidict.org/114.114.114.114
 server=/sciecure.com/114.114.114.114
+server=/sciedu.org/114.114.114.114
 server=/sciencecity.net/114.114.114.114
 server=/sciencehr.net/114.114.114.114
 server=/sciengine.com/114.114.114.114
