--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39921,6 +39921,7 @@ server=/gzxdzlyy.com/114.114.114.114
 server=/gzxf35.com/114.114.114.114
 server=/gzxhcbfx.com/114.114.114.114
 server=/gzxianc.com/114.114.114.114
+server=/gzxiaoban.com/114.114.114.114
 server=/gzxict.com/114.114.114.114
 server=/gzxijiu.com/114.114.114.114
 server=/gzxinfo.com/114.114.114.114
