--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21879,6 +21879,7 @@ server=/clqcgsgw.com/114.114.114.114
 server=/clqctxc.com/114.114.114.114
 server=/clqrmyy.com/114.114.114.114
 server=/clroi.com/114.114.114.114
+server=/cls-c.com/114.114.114.114
 server=/cls.cc/114.114.114.114
 server=/clsbhs.com/114.114.114.114
 server=/clsgd.com/114.114.114.114
