--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36935,6 +36935,7 @@ server=/guiqingkeji.com/114.114.114.114
 server=/guiququ.com/114.114.114.114
 server=/guiqv.com/114.114.114.114
 server=/guirong.com/114.114.114.114
+server=/guiscn.com/114.114.114.114
 server=/guishai.com/114.114.114.114
 server=/guishangtong.com/114.114.114.114
 server=/guishanhotel.com/114.114.114.114
