--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48551,6 +48551,7 @@ server=/is36.com/114.114.114.114
 server=/is404.com/114.114.114.114
 server=/is686.com/114.114.114.114
 server=/isa-hsse.com/114.114.114.114
+server=/isagzfls.com/114.114.114.114
 server=/isagzlw.com/114.114.114.114
 server=/isagzlws.com/114.114.114.114
 server=/isagzsc.com/114.114.114.114
