--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34567,6 +34567,7 @@ server=/gdzygy.com/114.114.114.114
 server=/gdzyinvest.com/114.114.114.114
 server=/gdzz114.com/114.114.114.114
 server=/gdzzjc.com/114.114.114.114
+server=/gdzzw.net/114.114.114.114
 server=/gdzzz.com/114.114.114.114
 server=/ge-garden.net/114.114.114.114
 server=/ge-stralen.com/114.114.114.114
