--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39884,6 +39884,7 @@ server=/gztamude.com/114.114.114.114
 server=/gztcdj.com/114.114.114.114
 server=/gztcm3.com/114.114.114.114
 server=/gztea.vip/114.114.114.114
+server=/gzteacher.com/114.114.114.114
 server=/gztfgame.com/114.114.114.114
 server=/gztgjd.com/114.114.114.114
 server=/gzthfy.com/114.114.114.114
