--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75256,6 +75256,7 @@ server=/scnjnews.com/114.114.114.114
 server=/scnjw.com/114.114.114.114
 server=/scnleee.com/114.114.114.114
 server=/scntv.com/114.114.114.114
+server=/scnufl.com/114.114.114.114
 server=/sco-marathon.com/114.114.114.114
 server=/scodereview.com/114.114.114.114
 server=/scoee.com/114.114.114.114
