accelerated-domains: add hgxxgz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42408,6 +42408,7 @@ server=/hgsyiyuan.com/114.114.114.114
 server=/hgszyyy.com/114.114.114.114
 server=/hguduo.com/114.114.114.114
 server=/hgvalve.com/114.114.114.114
+server=/hgxxgz.com/114.114.114.114
 server=/hgyys.com/114.114.114.114
 server=/hgzcjt.com/114.114.114.114
 server=/hgzk.com/114.114.114.114
