--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39817,6 +39817,7 @@ server=/gzpy120.net/114.114.114.114
 server=/gzpydlc.com/114.114.114.114
 server=/gzpyxz.net/114.114.114.114
 server=/gzqbd.com/114.114.114.114
+server=/gzqdedu.com/114.114.114.114
 server=/gzqiche.com/114.114.114.114
 server=/gzqixun-tech.com/114.114.114.114
 server=/gzqljxd.com/114.114.114.114
