--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37257,6 +37257,7 @@ server=/gwell.cc/114.114.114.114
 server=/gwetech.com/114.114.114.114
 server=/gwfls.com/114.114.114.114
 server=/gwfsy.ro/114.114.114.114
+server=/gwfx.net/114.114.114.114
 server=/gwgl168.com/114.114.114.114
 server=/gwi.cc/114.114.114.114
 server=/gwidc.com/114.114.114.114
