--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39584,6 +39584,7 @@ server=/gzcycling.com/114.114.114.114
 server=/gzczjd.com/114.114.114.114
 server=/gzdai.com/114.114.114.114
 server=/gzdaily.com/114.114.114.114
+server=/gzdangaopeixun.com/114.114.114.114
 server=/gzdaochen.com/114.114.114.114
 server=/gzdaqi.com/114.114.114.114
 server=/gzdata.net/114.114.114.114
