--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40250,6 +40250,7 @@ server=/haigui001.com/114.114.114.114
 server=/haihelashes.com/114.114.114.114
 server=/haihepharma.com/114.114.114.114
 server=/haihetour.com/114.114.114.114
+server=/haihuainternational.com/114.114.114.114
 server=/haihuishou.com/114.114.114.114
 server=/haiintelligent.com/114.114.114.114
 server=/haijia.org/114.114.114.114
