--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39973,6 +39973,7 @@ server=/gzxrsqj.com/114.114.114.114
 server=/gzxswh.com/114.114.114.114
 server=/gzxsyy.com/114.114.114.114
 server=/gzxszf.com/114.114.114.114
+server=/gzxue.com/114.114.114.114
 server=/gzxulang.com/114.114.114.114
 server=/gzxwtjy.com/114.114.114.114
 server=/gzxxm.com/114.114.114.114
