--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10231,6 +10231,7 @@ server=/aipaike.com/114.114.114.114
 server=/aipaiyinghua.com/114.114.114.114
 server=/aipapi.com/114.114.114.114
 server=/aipark.com/114.114.114.114
+server=/aipedu.net/114.114.114.114
 server=/aipenglai.com/114.114.114.114
 server=/aipgy.com/114.114.114.114
 server=/aiphz.com/114.114.114.114
