accelerated-domains: add dxs8.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28683,6 +28683,7 @@ server=/dxqjg.com/114.114.114.114
 server=/dxqyy.com/114.114.114.114
 server=/dxr.com/114.114.114.114
 server=/dxrc.com/114.114.114.114
+server=/dxs8.com/114.114.114.114
 server=/dxsaxw.com/114.114.114.114
 server=/dxsbb.com/114.114.114.114
 server=/dxsclass.com/114.114.114.114
