--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40600,6 +40600,7 @@ server=/hanlei.org/114.114.114.114
 server=/hanlin.com/114.114.114.114
 server=/hanlin.press/114.114.114.114
 server=/hanlindong.com/114.114.114.114
+server=/hanlinedu.com/114.114.114.114
 server=/hanlinzhijia.com/114.114.114.114
 server=/hanlinzhijia.net/114.114.114.114
 server=/hanlka.com/114.114.114.114
