--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90198,6 +90198,7 @@ server=/whckxx.com/114.114.114.114
 server=/whcotton.com/114.114.114.114
 server=/whcqedu.com/114.114.114.114
 server=/whcst.com/114.114.114.114
+server=/whctjg.com/114.114.114.114
 server=/whctv.com/114.114.114.114
 server=/whctyynk.com/114.114.114.114
 server=/whcx365.com/114.114.114.114
