--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48602,6 +48602,7 @@ server=/isagzth.com/114.114.114.114
 server=/isaieg.com/114.114.114.114
 server=/isamanhua.com/114.114.114.114
 server=/isanxia.com/114.114.114.114
+server=/isawhis.com/114.114.114.114
 server=/isay365.com/114.114.114.114
 server=/isay365.net/114.114.114.114
 server=/isayabc.com/114.114.114.114
