--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71685,6 +71685,7 @@ server=/qlteacher.com/114.114.114.114
 server=/qluu.com/114.114.114.114
 server=/qlwuji.com/114.114.114.114
 server=/qlxiaozhan.com/114.114.114.114
+server=/qlxyedu.com/114.114.114.114
 server=/qlydw.com/114.114.114.114
 server=/qlyygl.com/114.114.114.114
 server=/qlyyqd.com/114.114.114.114
