--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90197,6 +90197,7 @@ server=/whcdwater.com/114.114.114.114
 server=/whcfs.org/114.114.114.114
 server=/whcgtx.com/114.114.114.114
 server=/whchip.com/114.114.114.114
+server=/whcibe.com/114.114.114.114
 server=/whcjfc.com/114.114.114.114
 server=/whcjfq.com/114.114.114.114
 server=/whcjkq.com/114.114.114.114
