--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74264,6 +74264,7 @@ server=/ruiniucn.com/114.114.114.114
 server=/ruipai.com/114.114.114.114
 server=/ruipengkeji.com/114.114.114.114
 server=/ruiscz.com/114.114.114.114
+server=/ruisheng.cc/114.114.114.114
 server=/ruishengseal.com/114.114.114.114
 server=/ruisilc.com/114.114.114.114
 server=/ruisizt.com/114.114.114.114
