--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24459,6 +24459,7 @@ server=/cwdma.org/114.114.114.114
 server=/cwebgame.com/114.114.114.114
 server=/cwems.com/114.114.114.114
 server=/cwestc.com/114.114.114.114
+server=/cwfls.com/114.114.114.114
 server=/cwgarnet.com/114.114.114.114
 server=/cwgsdl.com/114.114.114.114
 server=/cwhnh.com/114.114.114.114
