--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51457,6 +51457,7 @@ server=/jixiewz.com/114.114.114.114
 server=/jixinbbd.com/114.114.114.114
 server=/jixixx.com/114.114.114.114
 server=/jixuanw.com/114.114.114.114
+server=/jixueedu.com/114.114.114.114
 server=/jixuninfo.com/114.114.114.114
 server=/jixunjsq.com/114.114.114.114
 server=/jixunlyq.com/114.114.114.114
