accelerated-domains: add whtpyzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90458,6 +90458,7 @@ server=/whtongzhou.net/114.114.114.114
 server=/whtpgbyy.com/114.114.114.114
 server=/whtpi.com/114.114.114.114
 server=/whtpyy.com/114.114.114.114
+server=/whtpyzx.com/114.114.114.114
 server=/whtran.com/114.114.114.114
 server=/whtryine.com/114.114.114.114
 server=/whtto.com/114.114.114.114
