--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90376,6 +90376,7 @@ server=/whmnls.com/114.114.114.114
 server=/whmnrc.com/114.114.114.114
 server=/whmnx.com/114.114.114.114
 server=/whmoocs.com/114.114.114.114
+server=/whmvc.net/114.114.114.114
 server=/whmxrj.com/114.114.114.114
 server=/whmylike.cc/114.114.114.114
 server=/whmylikekq.com/114.114.114.114
