--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48614,6 +48614,7 @@ server=/isamanhua.com/114.114.114.114
 server=/isanxia.com/114.114.114.114
 server=/isawhis.com/114.114.114.114
 server=/isawhs.com/114.114.114.114
+server=/isawuhan.com/114.114.114.114
 server=/isay365.com/114.114.114.114
 server=/isay365.net/114.114.114.114
 server=/isayabc.com/114.114.114.114
