--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90363,6 +90363,7 @@ server=/whkykj.com/114.114.114.114
 server=/whlabor.com/114.114.114.114
 server=/whland.com/114.114.114.114
 server=/whlangxing.com/114.114.114.114
+server=/whlexue.com/114.114.114.114
 server=/whlgchache.com/114.114.114.114
 server=/whlib.com/114.114.114.114
 server=/whlido.com/114.114.114.114
