--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5532,6 +5532,7 @@ server=/52qumao.com/114.114.114.114
 server=/52rd.com/114.114.114.114
 server=/52rd.net/114.114.114.114
 server=/52rental.com/114.114.114.114
+server=/52rsjy.com/114.114.114.114
 server=/52ruodian.com/114.114.114.114
 server=/52samsung.com/114.114.114.114
 server=/52shangou.com/114.114.114.114
