--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102023,6 +102023,7 @@ server=/zealer.com/114.114.114.114
 server=/zeali.net/114.114.114.114
 server=/zealquest.com/114.114.114.114
 server=/zealsafe.net/114.114.114.114
+server=/zebangedu.com/114.114.114.114
 server=/zebracdn.com/114.114.114.114
 server=/zebraenglish.com/114.114.114.114
 server=/zebred.com/114.114.114.114
