--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18232,6 +18232,7 @@ server=/ccrice.com/114.114.114.114
 server=/ccrjkf.com/114.114.114.114
 server=/ccrjw.com/114.114.114.114
 server=/ccsacacasfdghh.com/114.114.114.114
+server=/ccschangsha.com/114.114.114.114
 server=/ccscrbyy.com/114.114.114.114
 server=/ccsdj.com/114.114.114.114
 server=/ccsedqrmyy.com/114.114.114.114
