--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24089,6 +24089,7 @@ server=/csmjzs.com/114.114.114.114
 server=/csmscon.com/114.114.114.114
 server=/csnbgsh.com/114.114.114.114
 server=/csnhw.com/114.114.114.114
+server=/csomick.com/114.114.114.114
 server=/cspbj.com/114.114.114.114
 server=/cspda.net/114.114.114.114
 server=/cspengyuan.com/114.114.114.114
