--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51138,6 +51138,7 @@ server=/jinshangji.com/114.114.114.114
 server=/jinshanglawfirm.com/114.114.114.114
 server=/jinshangtechnology.com/114.114.114.114
 server=/jinshanju.com/114.114.114.114
+server=/jinshanmz.com/114.114.114.114
 server=/jinshare.com/114.114.114.114
 server=/jinshasitemuseum.com/114.114.114.114
 server=/jinshengceramics.com/114.114.114.114
