--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28234,6 +28234,7 @@ server=/dssz.com/114.114.114.114
 server=/dst.gov.mo/114.114.114.114
 server=/dstcar.com/114.114.114.114
 server=/dstfsbc.com/114.114.114.114
+server=/dstguanwang.com/114.114.114.114
 server=/dsti.net/114.114.114.114
 server=/dsvfdsf-bnigfo-sdkkg.com/114.114.114.114
 server=/dswenku.com/114.114.114.114
