--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21517,6 +21517,7 @@ server=/cjjhb.com/114.114.114.114
 server=/cjjhk.com/114.114.114.114
 server=/cjjjs.com/114.114.114.114
 server=/cjjnff.com/114.114.114.114
+server=/cjjunwei.com/114.114.114.114
 server=/cjjygr.com/114.114.114.114
 server=/cjk3d.net/114.114.114.114
 server=/cjkhd.com/114.114.114.114
