--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48146,6 +48146,7 @@ server=/inkonote.com/114.114.114.114
 server=/inktok.com/114.114.114.114
 server=/inkuai.com/114.114.114.114
 server=/inkwai.com/114.114.114.114
+server=/inlandschool.com/114.114.114.114
 server=/inlaylink.com/114.114.114.114
 server=/inlighting.org/114.114.114.114
 server=/inlishui.com/114.114.114.114
