--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24013,6 +24013,7 @@ server=/csdeshang.com/114.114.114.114
 server=/csdewater.com/114.114.114.114
 server=/csdh.com/114.114.114.114
 server=/csdhe.com/114.114.114.114
+server=/csdhxx.com/114.114.114.114
 server=/csdiy.wiki/114.114.114.114
 server=/csdn.com/114.114.114.114
 server=/csdn.net/114.114.114.114
