--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24081,6 +24081,7 @@ server=/csjplatform.com/114.114.114.114
 server=/csjsdz.com/114.114.114.114
 server=/csjtys.net/114.114.114.114
 server=/csjtz.com/114.114.114.114
+server=/csjunwei.com/114.114.114.114
 server=/csjvision.com/114.114.114.114
 server=/csjwang.com/114.114.114.114
 server=/cskaoyan.com/114.114.114.114
