--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43502,6 +43502,7 @@ server=/hnwcl.com/114.114.114.114
 server=/hnwczx.com/114.114.114.114
 server=/hnwd.com/114.114.114.114
 server=/hnwdhk.com/114.114.114.114
+server=/hnwhjy.com/114.114.114.114
 server=/hnwisecom.com/114.114.114.114
 server=/hnwlcm.com/114.114.114.114
 server=/hnwlxh.com/114.114.114.114
