--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24203,6 +24203,7 @@ server=/csygchb.com/114.114.114.114
 server=/csyhsy.com/114.114.114.114
 server=/csykgs.com/114.114.114.114
 server=/csylk.com/114.114.114.114
+server=/csylxy.com/114.114.114.114
 server=/csylzx.net/114.114.114.114
 server=/csyrtcs.com/114.114.114.114
 server=/csysgz.com/114.114.114.114
