--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51842,6 +51842,7 @@ server=/jlxhyy.com/114.114.114.114
 server=/jlxtxny.com/114.114.114.114
 server=/jlxzt.com/114.114.114.114
 server=/jlylwater.com/114.114.114.114
+server=/jlysgjzx.com/114.114.114.114
 server=/jlytzk.com/114.114.114.114
 server=/jlywkj.com/114.114.114.114
 server=/jlzhongdong.com/114.114.114.114
