--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43234,6 +43234,7 @@ server=/hmzjzx.com/114.114.114.114
 server=/hmzs.net/114.114.114.114
 server=/hmzx163.com/114.114.114.114
 server=/hn-cbec.com/114.114.114.114
+server=/hn-coach.com/114.114.114.114
 server=/hn-membrane.com/114.114.114.114
 server=/hn-pc.com/114.114.114.114
 server=/hn0746.com/114.114.114.114
