--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24093,6 +24093,7 @@ server=/csjvision.com/114.114.114.114
 server=/csjwang.com/114.114.114.114
 server=/cskaoyan.com/114.114.114.114
 server=/cskefu.com/114.114.114.114
+server=/cskjgc.com/114.114.114.114
 server=/cskliz.com/114.114.114.114
 server=/csksoft.net/114.114.114.114
 server=/cskx.com/114.114.114.114
