--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23980,6 +23980,7 @@ server=/cs2ccloud.com/114.114.114.114
 server=/cs30.net/114.114.114.114
 server=/cs528.com/114.114.114.114
 server=/cs53.com/114.114.114.114
+server=/cs6zhong.com/114.114.114.114
 server=/csadec.com/114.114.114.114
 server=/csaimall.com/114.114.114.114
 server=/csair.com/114.114.114.114
