accelerated-domains: add chinadas.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20164,6 +20164,7 @@ server=/chinadailyglobal.com/114.114.114.114
 server=/chinadais.net/114.114.114.114
 server=/chinadance.com/114.114.114.114
 server=/chinadart.com/114.114.114.114
+server=/chinadas.net/114.114.114.114
 server=/chinadatatrading.com/114.114.114.114
 server=/chinadazhaxie.com/114.114.114.114
 server=/chinadbs.com/114.114.114.114
