--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93720,6 +93720,7 @@ server=/xiaolantiao.com/114.114.114.114
 server=/xiaole.com/114.114.114.114
 server=/xiaoleidm.com/114.114.114.114
 server=/xiaoleimob.com/114.114.114.114
+server=/xiaolianbao.com/114.114.114.114
 server=/xiaoliangkou.com/114.114.114.114
 server=/xiaolianhb.com/114.114.114.114
 server=/xiaoliebian.com/114.114.114.114
