accelerated-domains: add ganjiangvpn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33967,6 +33967,7 @@ server=/ganhuoche.com/114.114.114.114
 server=/ganhuodaquan.com/114.114.114.114
 server=/ganji.com/114.114.114.114
 server=/ganjiangrc.com/114.114.114.114
+server=/ganjiangvpn.com/114.114.114.114
 server=/ganjiazheng.com/114.114.114.114
 server=/ganjin.com/114.114.114.114
 server=/ganjistatic1.com/114.114.114.114
