accelerated-domains: add atk-film.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12273,6 +12273,7 @@ server=/atianqi.com/114.114.114.114
 server=/atido.com/114.114.114.114
 server=/atimeli.com/114.114.114.114
 server=/ating.info/114.114.114.114
+server=/atk-film.com/114.114.114.114
 server=/atk.pro/114.114.114.114
 server=/atlab.ai/114.114.114.114
 server=/atlaslovestravel.com/114.114.114.114
