accelerated-domains: add hzyread.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46274,6 +46274,7 @@ server=/hzyoka.com/114.114.114.114
 server=/hzyoumai.com/114.114.114.114
 server=/hzyoushu.com/114.114.114.114
 server=/hzyqys.com/114.114.114.114
+server=/hzyread.com/114.114.114.114
 server=/hzyuewan.com/114.114.114.114
 server=/hzyunding.com/114.114.114.114
 server=/hzywinf.com/114.114.114.114
