accelerated-domains: add douhuaxiongmao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27804,6 +27804,7 @@ server=/douhaomei.com/114.114.114.114
 server=/douhua.net/114.114.114.114
 server=/douhuameiquan.com/114.114.114.114
 server=/douhuawenxue.com/114.114.114.114
+server=/douhuaxiongmao.com/114.114.114.114
 server=/douhuibuy.com/114.114.114.114
 server=/douhuomall.com/114.114.114.114
 server=/doukantv.com/114.114.114.114
