accelerated-domains: add qq9v.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71635,6 +71635,7 @@ server=/qq7c.com/114.114.114.114
 server=/qq933.com/114.114.114.114
 server=/qq937.com/114.114.114.114
 server=/qq999q.com/114.114.114.114
+server=/qq9v.com/114.114.114.114
 server=/qqaiqin.com/114.114.114.114
 server=/qqan.com/114.114.114.114
 server=/qqb.pub/114.114.114.114
