accelerated-domains: add weike.space

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89278,6 +89278,7 @@ server=/weikao.com/114.114.114.114
 server=/weikaowu.com/114.114.114.114
 server=/weikasen.com/114.114.114.114
 server=/weike.fm/114.114.114.114
+server=/weike.space/114.114.114.114
 server=/weike21.com/114.114.114.114
 server=/weikeimg.com/114.114.114.114
 server=/weikelink.com/114.114.114.114
