accelerated-domains: add chenlaoshiyanjing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19610,6 +19610,7 @@ server=/chenjinghealth.com/114.114.114.114
 server=/chenjt.com/114.114.114.114
 server=/chenkeiot.com/114.114.114.114
 server=/chenksoft.com/114.114.114.114
+server=/chenlaoshiyanjing.com/114.114.114.114
 server=/chenlb.com/114.114.114.114
 server=/chenlianfu.com/114.114.114.114
 server=/chenliangroup.com/114.114.114.114
