accelerated-domains: add asterfusion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12207,6 +12207,7 @@ server=/asso.bj/114.114.114.114
 server=/assrt.net/114.114.114.114
 server=/astaobao.com/114.114.114.114
 server=/astbbs.com/114.114.114.114
+server=/asterfusion.com/114.114.114.114
 server=/asteriavs.com/114.114.114.114
 server=/astestech.com/114.114.114.114
 server=/astfc.com/114.114.114.114
