accelerated-domains: add fhfxys.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32021,6 +32021,7 @@ server=/fhcomp.com/114.114.114.114
 server=/fhd001.com/114.114.114.114
 server=/fheb-four.com/114.114.114.114
 server=/fheb-six.com/114.114.114.114
+server=/fhfxys.com/114.114.114.114
 server=/fhgame.com/114.114.114.114
 server=/fhldns.com/114.114.114.114
 server=/fhldns.net/114.114.114.114
