accelerated-domains: add yjwlnet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98494,6 +98494,7 @@ server=/yjsswjt.com/114.114.114.114
 server=/yjtiyu.com/114.114.114.114
 server=/yjtvw.com/114.114.114.114
 server=/yjussl.xyz/114.114.114.114
+server=/yjwlnet.com/114.114.114.114
 server=/yjwlo.com/114.114.114.114
 server=/yjwujian.com/114.114.114.114
 server=/yjxbgjj.com/114.114.114.114
